Address review comments. Clean up logic and loggers.